--- a/src/resources/CSS/Footer.css
+++ b/src/resources/CSS/Footer.css
@@ -17,7 +17,7 @@
 .footer-content {
     color: var(--text-plain);
     font-size: 15px;
-    font-family: Cairo;
+    font-family: Cairo, sans-serif;
 }
 
 
