cart items will be saved to db on unload

--- a/src/resources/CSS/variable.css
+++ b/src/resources/CSS/variable.css
@@ -8,6 +8,8 @@
     --text-light: white;
     --text-grey: grey;
     --input-focus: rgb(255, 196, 0);
+    --button-border: rgb(255, 196, 0);
+    --button-text: rgb(255, 196, 0);
     --nav-link-inactive: black;
     --nav-link-active: rgb(255, 196, 0);
     --popup-input-bg: rgb(246, 246, 246);
