--- a/src/resources/CSS/variable.css
+++ b/src/resources/CSS/variable.css
@@ -10,6 +10,8 @@
     --input-focus: rgb(255, 196, 0);
     --button-border: rgb(255, 196, 0);
     --button-text: rgb(255, 196, 0);
+    --primary-yellow: rgb(255, 196, 0);
+    --primary-yellow-text: rgb(255, 196, 0);
     --nav-link-inactive: black;
     --nav-link-active: rgb(255, 196, 0);
     --popup-input-bg: rgb(246, 246, 246);
